--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	<title>Document</title>
 </head>
 <body>
-	<h1> Rahim Gokceli </h1>
+	<h1> Rahim Gokceli - Personal Web Site is <strong>LOADİNG... </strong> </h1>
 </body>
 </html>
