update:index.html

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Document</title>
+	<title>RG</title>
 </head>
 <body>
-	<h1> Rahim Gokceli - Personal Web Site is <strong>LOADİNG... </strong> </h1>
+	<a href="http://rahimgokceli.me/.well-known/pki-validation/9A900F92A9DFBDB64EDC06CB39B41C1D.txt"></a>
 </body>
 </html>
