update: indexpagenad add: cv page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Responsive Personal Portfolio Website - HTML, CSS & Vanilla Javascript</title>
+    <title>RG</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
   </head>
@@ -14,31 +14,30 @@
     </div>
 
     <header>
-      <a href="#" class="brand">Jacob</a>
+      <a href="#" class="brand">Rahim</a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="#main">Home</a>
         <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#services">Services</a>
-        <a href="#work">Work</a>
+        <a href="#abilities">Abilities</a>
+        <a href="#p_portfolio">Portfolio</a>
         <a href="#contact">Contact</a>
       </div>
     </header>
 
     <section class="main" id="main">
       <div class="content">
-        <h2>Hello, I'm<br><span>Jacob Stevens</span></h2>
+        <h2>Hello, I'm<br><span>Rahim Gokceli</span></h2>
         <div class="animated-text">
-          <h3>Web Designer</h3>
-          <h3>Web Developer</h3>
-          <h3>Motion Graphic Designer</h3>
+          <h3>ML & DL Researcher</h3>
+          <h3>Web & Mobile Developer</h3>
+          <h3>Photographer</h3>
         </div>
-        <a href="#" class="btn">See My Work</a>
+        <a href="cv.html" class="btn">See My CV</a>
         <div class="media-icons">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
+          <a href="https://www.linkedin.com/in/rahimgokceli/"><i class="fab fa-linkedin-in"></i></a>
+          <a href="https://www.instagram.com/rhm.gokcli/"><i class="fab fa-instagram"></i></a>
+          <a href="https://github.com/RgSware"><i class="fab fa-github"></i></a>
         </div>
       </div>
     </section>
@@ -50,80 +49,29 @@
       <div class="content">
         <div class="column col-left reveal">
           <div class="img-card">
-            <img src="images/img1.jpg" alt="">
+            <img src="images/ben.jpg" alt="">
           </div>
         </div>
         <div class="column col-right reveal">
-          <h2 class="content-title">Hey There! I'm Jacob Stevens</h2>
-          <p class="paragraph-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.<br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a href="#" class="btn">See More</a>
+          <h2 class="content-title">Hey There! I'm Rahim Gokceli</h2>
+          <p class="paragraph-text">I am a 3rd year student in Computer Engineering at Istanbul University. Since the day I started university, I have been making efforts to improve myself in software, and I think that artificial intelligence will play a critical role in technology in the coming years, and I increase my knowledge in this field to realize my dream project. If I talk about my career goals, I want to finish my school with the best degree I can and continue my education (Master's - Doctorate) in America or Europe, considering that academic studies are very effective in the development of new technologies. In this way, I want to deepen in my field and draw a profile that not only uses information but produces information. Thereafter, I want to contribute to the solution of scientific problems, pioneer new technological developments with the information I have acquired, and I want to instill this idea in our little friends.</p>
+          <a href="cv.html" class="btn">See More</a>
         </div>
       </div>
     </section>
-
-    <section class="skills" id="skills">
+    <section class="services" id="abilities">
       <div class="title reveal">
-        <h2 class="section-title">My Skills</h2>
-      </div>
-      <div class="content">
-        <div class="column col-left reveal">
-          <h2 class="content-title">My Skills and Experiences</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <a href="#" class="btn">See More</a>
-        </div>
-        <div class="column col-right reveal">
-          <div class="bar">
-            <div class="info">
-              <span>HTML</span>
-              <span>95%</span>
-            </div>
-            <div class="line html"></div>
-          </div>
-          <div class="bar">
-            <div class="info">
-              <span>CSS</span>
-              <span>85%</span>
-            </div>
-            <div class="line css"></div>
-          </div>
-          <div class="bar">
-            <div class="info">
-              <span>Javascript</span>
-              <span>80%</span>
-            </div>
-            <div class="line javascript"></div>
-          </div>
-          <div class="bar">
-            <div class="info">
-              <span>JQuery</span>
-              <span>80%</span>
-            </div>
-            <div class="line jquery"></div>
-          </div>
-          <div class="bar">
-            <div class="info">
-              <span>PHP</span>
-              <span>75%</span>
-            </div>
-            <div class="line php"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <section class="services" id="services">
-      <div class="title reveal">
-        <h2 class="section-title">My Services</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <h2 class="section-title">My Abilities</h2>
+        <p>Our world is developing rapidly with each passing day and I try to improve myself as much as possible in this way.</p>
       </div>
       <div class="content">
         <div class="card reveal">
           <div class="service-icon">
-            <i class="fas fa-palette"></i>
+            <i class="fas fa-image"></i>
           </div>
           <div class="info">
-            <h3>Web Design</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>Stock Photography</h3>
+            <p>I am taking landscape, city, street, historical, nature pictures. Then I am selling these imges who want to buy.</p>
           </div>
         </div>
         <div class="card reveal">
@@ -131,59 +79,59 @@
             <i class="fas fa-file-code"></i>
           </div>
           <div class="info">
-            <h3>Web Development</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>Web & Mobile Development</h3>
+            <p>I am developing cross-platform applications( Web and Mobile)</p>
           </div>
         </div>
         <div class="card reveal">
           <div class="service-icon">
-            <i class="fas fa-object-group"></i>
+            <i class="fas fa-robot"></i>
           </div>
           <div class="info">
-            <h3>Motion Graphic Design</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <h3>ML & DL Researching</h3>
+            <p>In the research group I am involved in, we research and develop machine and deep learning algorithms. We also apply it on real world problems.</p>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="work" id="work">
+    <section class="work" id="p_portfolio">
       <div class="title reveal">
-        <h2 class="section-title">My Work</h2>
+        <h2 class="section-title">My Photographer Portfolio</h2>
       </div>
       <div class="content">
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work1.jpg" alt="">
+            <img src="images/p1.jpg" alt="">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work2.jpg" alt="">
+            <img src="images/p2.jpg" alt="">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work3.jpg" alt="">
+            <img src="images/p3.jpg" alt="">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work4.jpg" alt="">
+            <img src="images/p4.jpg" alt="">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work5.jpg" alt="">
+            <img src="images/p5.jpg" alt="">
           </div>
         </div>
         <div class="card reveal">
           <div class="card-img">
-            <img src="images/work6.jpg" alt="">
+            <img src="images/p6.jpg" alt="">
           </div>
         </div>
         <div class="title reveal">
-          <a href="#" class="btn">See All</a>
+          <a href="https://www.instagram.com/rhm.gokcli/" class="btn">See All</a>
         </div>
       </div>
     </section>
@@ -200,7 +148,7 @@
             </div>
             <div class="info">
               <h3>Address</h3>
-              <span>Address, City, Country</span>
+              <span>Ataturk Neighborhood , Sedef Street, No: 10/12 Esenyurt, Istanbul, Turkey</span>
             </div>
           </div>
           <div class="card reveal">
@@ -209,7 +157,7 @@
             </div>
             <div class="info">
               <h3>Phone</h3>
-              <span>+00 0000 000 000</span>
+              <span>+90 534 074 81 06</span>
             </div>
           </div>
           <div class="card reveal">
@@ -218,7 +166,7 @@
             </div>
             <div class="info">
               <h3>Email Address</h3>
-              <span>contact@email.com</span>
+              <span>rahim.gokceli@ogr.iu.edu.tr</span>
             </div>
           </div>
           <div class="card reveal">
@@ -227,7 +175,7 @@
             </div>
             <div class="info">
               <h3>Website</h3>
-              <span>mywebsite.com</span>
+              <span>rahimgokceli.me</span>
             </div>
           </div>
         </div>
@@ -252,8 +200,8 @@
     </section>
 
     <footer class="footer">
-      <span class="footer-title">Jacob Stevens</span>
-      <p>Copyright @2021 <a href="#">Coding Snow</a>. All Rights Reserved.</p>
+      <span class="footer-title">Rahim GOKCELI</span>
+      <p>Copyright @2021 <a href="https://rahimgokceli.me/">Rahim</a>. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js" charset="utf-8"></script>
