--- a/cv.html
+++ b/cv.html
@@ -19,16 +19,15 @@
       <div class="navigation">
         <a href="index.html#main">Home</a>
         <a href="index.html#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#services">Services</a>
-        <a href="#work">Work</a>
-        <a href="#contact">Contact</a>
+        <a href="index.html#abilities">Abilities</a>
+        <a href="index.html#p_portfolio">Portfolio</a>
+        <a href="index.html#contact">Contact</a>
       </div>
     </header>   
      <div class="resume">
        <div class="resume_left">
          <div class="resume_profile">
-           <img src="RahimGökçeli2.jpg" alt="profile_pic">
+           <img src="images/RahimGökçeli2.jpg" alt="profile_pic">
          </div>
          <div class="resume_content">
            <div class="resume_item resume_info">
