--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <header>
-      <a href="#" class="brand">Rahim</a>
+      <a href="https://rahimgokceli.me/" class="brand">RG</a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="#main">Home</a>
@@ -201,7 +201,7 @@
 
     <footer class="footer">
       <span class="footer-title">Rahim GOKCELI</span>
-      <p>Copyright @2021 <a href="https://rahimgokceli.me/">Rahim</a>. All Rights Reserved.</p>
+      <p>Copyright @2021 <a href="https://rahimgokceli.me/"> RG </a>. All Rights Reserved.</p>
     </footer>
 
     <script src="script.js" charset="utf-8"></script>
