--- a/cv.html
+++ b/cv.html
@@ -14,7 +14,7 @@
     </div>
 
     <header class="cv">
-      <a href="#" class="brand_cv">Rahim</a>
+      <a href="https://rahimgokceli.me/" class="brand_cv">RG</a>
       <div class="menu-btn"></div>
       <div class="navigation">
         <a href="index.html#main">Home</a>
