--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
           <h3>Photographer</h3>
         </div>
         <a href="cv.html" class="btn">See My CV</a>
+        <a href="pickColors.html" class="btn">HW Game</a>
         <div class="media-icons">
           <a href="https://www.linkedin.com/in/rahimgokceli/"><i class="fab fa-linkedin-in"></i></a>
           <a href="https://www.instagram.com/rhm.gokcli/"><i class="fab fa-instagram"></i></a>
