add:home link in HW

--- a/pickColors.html
+++ b/pickColors.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="color.css">
   <body>
   <h1 id="ilksayfa">
+    <a href="https://rahimgokceli.me/">Home</a>
       <button id="easyBtn">Easy</button>
       <button id="mediumBtn">Medium</button>
       <button id ="hardBtn">Hard</button>
