update: pickColors.html

--- a/pickColors.html
+++ b/pickColors.html
@@ -15,7 +15,7 @@
 <h1 id="pickColor">
   <span id="rgbCode">RGB</span>
   <br>
-  Color Picking Game - RG  
+  RG - Pick The Color 
   <br>
   <span id="time"></span>
 </h1>
@@ -25,12 +25,6 @@
 <div id="stripe">
   <button id="reset">New Colors</button>
   <span id="message"></span>
-  <button id="easyBtn">Easy</button>
-  <button id="mediumBtn">Medium</button>
-  <button id ="hardBtn">Hard</button>
-  <button id="start">Start</button>
-  
-  
 </div>
 
 <div id="container">
