update: css and cv.html

--- a/cv.html
+++ b/cv.html
@@ -276,7 +276,7 @@
                     </div>
                 </li>
                 <li>
-                  <div class="date">july 2020 - Current</div>
+                  <div class="date">15 July 2020 - Current</div>
                   <div class="info">
                          <p class="semi-bold">Co-Founder</p> 
                       <p>SliWork( e-Learn Startup), Tavsiyeniz( e-Commerce Startup)</p>
