--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
     <section class="main" id="main">
       <div class="content">
-        <h2>Hello, I'm<br><span>Rahim Gokceli</span></h2>
+        <h2>Hello, I'm<br><span>Rahim GOKCELİ</span></h2>
         <div class="animated-text">
           <h3>ML & DL Researcher</h3>
           <h3>Web & Mobile Developer</h3>
           <h3>Photographer</h3>
         </div>
-        <a href="cv.html" class="btn">See My CV</a>
+        <a href="CV_Rahim_Gokceli.pdf" class="btn">See My CV</a>
         <a href="pickColors.html" class="btn">HW Game</a>
         <div class="media-icons">
           <a href="https://www.linkedin.com/in/rahimgokceli/"><i class="fab fa-linkedin-in"></i></a>
@@ -56,7 +56,7 @@
         </div>
         <div class="column col-right reveal">
           <h2 class="content-title">Hey There! I'm Rahim Gokceli</h2>
-          <p class="paragraph-text">I am a 3rd year student in Computer Engineering at Istanbul University. Since the day I started university, I have been making efforts to improve myself in software, and I think that artificial intelligence will play a critical role in technology in the coming years, and I increase my knowledge in this field to realize my dream project. If I talk about my career goals, I want to finish my school with the best degree I can and continue my education (Master's - Doctorate) in America or Europe, considering that academic studies are very effective in the development of new technologies. In this way, I want to deepen in my field and draw a profile that not only uses information but produces information. Thereafter, I want to contribute to the solution of scientific problems, pioneer new technological developments with the information I have acquired, and I want to instill this idea in our little friends.</p>
+          <p class="paragraph-text">I am a 4th year student in Computer Engineering at Istanbul University. Since the day I started university, I have been making efforts to improve myself in software, and I think that artificial intelligence will play a critical role in technology in the coming years, and I increase my knowledge in this field to realize my dream project. If I talk about my career goals, I want to finish my school with the best degree I can and continue my education (Master's - Doctorate) in America or Europe, considering that academic studies are very effective in the development of new technologies. In this way, I want to deepen in my field and draw a profile that not only uses information but produces information. Thereafter, I want to contribute to the solution of scientific problems, pioneer new technological developments with the information I have acquired, and I want to instill this idea in our little friends.</p>
           <a href="cv.html" class="btn">See More</a>
         </div>
       </div>
