--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <section class="main" id="main">
       <div class="content">
-        <h2>Hello, I'm<br><span>Rahim GOKCELİ</span></h2>
+        <h2>Hello, I'm<br><span>Rahim GOKCELI</span></h2>
         <div class="animated-text">
           <h3>ML & DL Researcher</h3>
           <h3>Web & Mobile Developer</h3>
