--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="column col-right reveal">
           <h2 class="content-title">Hey There! I'm Rahim Gokceli</h2>
           <p class="paragraph-text">I am a 4th year student in Computer Engineering at Istanbul University. Since the day I started university, I have been making efforts to improve myself in software, and I think that artificial intelligence will play a critical role in technology in the coming years, and I increase my knowledge in this field to realize my dream project. If I talk about my career goals, I want to finish my school with the best degree I can and continue my education (Master's - Doctorate) in America or Europe, considering that academic studies are very effective in the development of new technologies. In this way, I want to deepen in my field and draw a profile that not only uses information but produces information. Thereafter, I want to contribute to the solution of scientific problems, pioneer new technological developments with the information I have acquired, and I want to instill this idea in our little friends.</p>
-          <a href="cv.html" class="btn">See More</a>
+          <a href="CV_Rahim_Gokceli.pdf" class="btn">See More</a>
         </div>
       </div>
     </section>
